--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     method="post">
         first name: <input type="text" name="first-name"> <br>
         last name: <input type="text" name="last-name"> <br>
-        email: <input type="email" name="email"> <br>
+        email: <input type="text" name="email"> <br>
         pass: <input type="password" name="password"> <br>
         <button type="submit">送出</button>
     </form>
