--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <form   
     action="/api/auth/login"
     method="post">
-        email: <input type="email" name="email"> <br>
+        email: <input type="text" name="email"> <br>
         pass: <input type="password" name="password"> <br>
         <button type="submit">送出</button>
     </form>
@@ -24,5 +24,7 @@
         pass: <input type="password" name="password"> <br>
         <button type="submit">送出</button>
     </form>
+
+    <script></script>
 </body>
 </html>
